Moving vm parameters to maven variables to change them easier