@@ -95,11 +95,22 @@
         <jackson.version>2.12.3</jackson.version>
 
         <mainclass>mediathek.Main</mainclass>
+
         <!-- AdopOpenJDK is used for Windows and Linux 64bit -->
         <install4j.adoptopenjdk.jdk.version>16/jdk-16.0.1+9</install4j.adoptopenjdk.jdk.version>
         <!-- Liberica includes JavaFX and is used for Arm and 32bit -->
         <install4j.liberica.jdk.version>16/16.0.1+9</install4j.liberica.jdk.version>
         <install4j.jdk.min-version>16</install4j.jdk.min-version>
+
+        <!-- VM Parameters Windows x64 -->
+        <install4j.vmparameters.win.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication -Dfile.encoding=UTF-8 -DexternalUpdateCheck</install4j.vmparameters.win.64>
+        <!-- VM Parameters Linux x64 -->
+        <install4j.vmparameters.linux.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED -Dfile.encoding=UTF-8 -DexternalUpdateCheck</install4j.vmparameters.linux.64>
+        <!-- VM Parameters Windows x32 -->
+        <install4j.vmparameters.win.32>-Xmx1280M -XX:+UseG1GC -XX:+UseStringDeduplication -Dfile.encoding=UTF-8 -DexternalUpdateCheck --add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</install4j.vmparameters.win.32>
+        <!-- VM Parameters Linux x32 -->
+        <install4j.vmparameters.linux.32>-Xmx1280M -XX:+UseG1GC -XX:+UseStringDeduplication -Dfile.encoding=UTF-8 -DexternalUpdateCheck --add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</install4j.vmparameters.linux.32>
+
         <install4j.home>./install4j9.0.2</install4j.home>
         <!--suppress UnresolvedMavenProperty -->
         <install4j.licenseKey>${env.LICENSE_KEY_9}</install4j.licenseKey>
